Add contact module

--- a/cognossystem-testes/cognossystem-testes.csproj
+++ b/cognossystem-testes/cognossystem-testes.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ContatosController.cs" />
     <Compile Include="Controllers\EmpresasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\CognosDataContext.cs" />
@@ -453,6 +454,11 @@
     <Content Include="Views\Empresas\Index.cshtml" />
     <Content Include="Views\Empresas\Create.cshtml" />
     <Content Include="Views\Empresas\Edit.cshtml" />
+    <Content Include="Views\Contatos\Create.cshtml" />
+    <Content Include="Views\Contatos\Delete.cshtml" />
+    <Content Include="Views\Contatos\Details.cshtml" />
+    <Content Include="Views\Contatos\Edit.cshtml" />
+    <Content Include="Views\Contatos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
